# python-graphql-api-template

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
src/: router.py
src/_graphql/: __init__.py  schema.py
src/_graphql/queries/: __init__.py  todos.py
src/_graphql/schemas/: todos.graphql
src/blueprints/: __init__.py  errors.py  graphql.py
src/types/: errors.py  graphql.py
tests/src/: conftest.py  router_test.py
tests/src/_graphql/queries/: todos_test.py
tests/src/blueprints/: errors_test.py  graphql_test.py
tests/src/types/: errors_test.py  graphql_test.py
