[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "api-template"
version = "0.1.0"
description = "Backend GraphQL API Template"
readme = "README.md"
repository = ""
authors = ["Caleb Reiter <caleb@reiters.org>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
Flask = "^2.2.2"
aws-wsgi = "^0.2.7"
ariadne = "^0.16.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
boto3 = "^1.26.12"
isort = "^5.10.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.2"
pyupgrade = "^3.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
moto = "^4.0.9"

[tool.poetry.group.integration.dependencies]
behave = "^1.2.6"
behave-html-formatter = "^0.9.10"

[tool.poetry.group.lint.dependencies]
darglint = "^1.8.1"
flakeheaven = "^3.2.1"
flake8 = "^4.0.0"
flake8-2020 = "^1.6.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.4"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.4.0"
flake8-isort = "^5.0.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-pytest-style = ">=1.6.0"
flake8-tidy-imports = "^4.8.0"
flake8-use-fstring = "^1.4"
pep8-naming = "^0.13.2"

[tool.poetry.group.mypy.dependencies]
mypy = "^0.991"

[tool.poetry.group.xenon.dependencies]
xenon = "^0.9.0"

[tool.poetry.group.local.dependencies]
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"

[tool.flakeheaven.plugins]
flake8-2020 = ["+*"]
flake8-bandit = ["+*", "-S322"]
flake8-black = ["+*"]
flake8-broken-line = ["+*"]
flake8-bugbear = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-print = ["+*"]
flake8-pytest = ["+*"]
flake8-pytest-style = ["+*"]
flake8-tidy-imports = ["+*"]
flake8-use-fstring = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]
flake8-docstrings = ["-D100", "-D102", "-D103", "-D104"]

[tool.flakeheaven.exceptions."features/"]
flake8-bandit = ["-S101"]
flake8-docstrings = ["-D100", "-D102", "-D103", "-D104"]

[tool.flakeheaven]
extended_default_ignore=[]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
files = "src/**/*.py"
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
